Add script creating topic in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,10 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_JMX_PORT: 9999
       KAFKA_JMX_HOSTNAME: ${DOCKER_HOST_IP:-127.0.0.1}
+
+      # 토픽 생성
+      KAFKA_CREATE_TOPICS: "simple-message:1:1"
+
     volumes:
       - ./zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
     depends_on:
